# neuralspotx

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  NOTICE  README.md  REVIEW.md  REVIEW2.md  SECURITY.md  atomiq110-nsx-ambiq-sdk.patch  mkdocs.yml  pyproject.toml  release-please-config.json
examples/audio_capture/: .gitignore  CMakeLists.txt  README.md  nsx.yml
examples/audio_capture/boards/apollo330mP_evb/: nsx-module.yaml
examples/audio_capture/boards/apollo510_evb/: board.cmake  bsp.cmake  soc.cmake
examples/audio_capture/boards/apollo510b_evb/: memory.cmake
examples/audio_capture/boards/apollo510dL_evb/: board.cmake
examples/audio_capture/modules/: .gitignore
examples/audio_capture/src/: main.c
examples/ble_webble/: .gitignore  CMakeLists.txt  README.md  nsx.yml
examples/ble_webble/boards/apollo3p_evb/: board.cmake  memory.cmake  nsx-module.yaml
examples/ble_webble/boards/apollo4p_blue_kxr_evb/: bsp.cmake  soc.cmake
examples/ble_webble/boards/apollo510b_evb/: bsp.cmake
examples/ble_webble/cmake/presets/: CMakePresets.json
examples/ble_webble/config/: FreeRTOSConfig.h
examples/ble_webble/modules/: .gitignore
examples/ble_webble/src/: flash_probe.c  main.c
examples/ble_webble/tools/: ble_webble_host.py
examples/coremark/: CMakeLists.txt  README.md  linker_script_itcm.ld  linker_script_itcm.sct  nsx.yml
examples/coremark/boards/apollo330mP_evb/: bsp.cmake  debug.cmake  memory.cmake
examples/coremark/boards/apollo4p_blue_kxr_evb/: board.cmake  debug.cmake
examples/coremark/boards/apollo510_evb/: board.cmake  bsp.cmake  nsx-module.yaml
examples/coremark/boards/apollo510b_evb/: board.cmake
examples/coremark/cmake/nsx/: modules.cmake  nsx_app_bootstrap.cmake  nsx_board_table.cmake  nsx_sdk_providers.cmake  nsx_toolchain_flags.cmake
examples/coremark/cmake/nsx/toolchains/: arm-none-eabi-gcc.cmake  armclang.cmake
examples/coremark/cmake/presets/: CMakePresets.json
examples/coremark/modules/: .gitignore
examples/coremark/src/: core_portme.c
examples/coremark/src/rtt/: SEGGER_RTT.c
examples/coremark/tools/: joulescope_capture.py  rtt_capture.py
examples/freertos_blinky_apollo4p/: .gitignore  CMakeLists.txt  README.md  nsx.yml
examples/freertos_blinky_apollo4p/boards/apollo4p_blue_kxr_evb/: board.cmake
examples/freertos_blinky_apollo4p/modules/: .gitignore
examples/freertos_blinky_apollo4p/src/: main.c
examples/hello_world/: CMakeLists.txt  README.md  nsx.yml
examples/hello_world/boards/apollo330mP_evb/: board.cmake
examples/hello_world/boards/apollo4p_blue_kxr_evb/: board.cmake  nsx-module.yaml
examples/hello_world/boards/apollo510b_evb/: bsp.cmake
examples/hello_world/boards/apollo510dL_evb/: bsp.cmake  memory.cmake
examples/hello_world/modules/: .gitignore
examples/hello_world/src/: main.c
examples/kws_infer/: .ci-skip  .gitignore  CMakeLists.txt  README.md  nsx.yml
examples/kws_infer/src/: kws_model_data.h  main.cc  nsx_pmu_profiler.cc  nsx_pmu_profiler.h
examples/pmu_profiling/: CMakeLists.txt  README.md  nsx.yml
examples/pmu_profiling/boards/apollo510_evb/: board.cmake
examples/pmu_profiling/boards/apollo510b_evb/: board.cmake
examples/pmu_profiling/boards/apollo510dL_evb/: bsp.cmake
examples/pmu_profiling/modules/: .gitignore
examples/pmu_profiling/src/: main.c
examples/power_benchmark/: CMakeLists.txt  README.md  linker_script_itcm.ld  nsx.yml
examples/power_benchmark/boards/apollo510_evb/: board.cmake
examples/power_benchmark/boards/apollo510b_evb/: board.cmake
examples/power_benchmark/cmake/nsx/: modules.cmake  nsx-module.yaml  nsx_app_bootstrap.cmake  nsx_helpers.cmake  nsx_sdk_providers.cmake  nsx_toolchain_flags.cmake
examples/power_benchmark/cmake/nsx/toolchains/: atfe.cmake
examples/power_benchmark/modules/: .gitignore
examples/power_benchmark/src/: core_portme.c  core_portme.h  main.c
examples/power_benchmark/tools/: compare_regdump.py  joulescope_capture.py
examples/resnet_example/: .gitignore  CMakeLists.txt  README.md  golden.npz  nsx.yml
examples/resnet_example/modules/: .gitignore
examples/resnet_example/modules/resnet-aot/: CMakeLists.txt  LICENSE  README.md  nsx-module.yaml
examples/resnet_example/modules/resnet-aot/includes-api/: resnet_add_11.h  resnet_add_3.h  resnet_add_7.h  resnet_average_pool_2d_12.h  resnet_common.h  resnet_compiler.h  resnet_context.h  resnet_conv_2d_0.h  resnet_conv_2d_1.h  resnet_conv_2d_10.h  resnet_conv_2d_2.h  resnet_conv_2d_4.h  resnet_conv_2d_5.h  resnet_conv_2d_6.h  resnet_conv_2d_8.h  resnet_conv_2d_9.h  resnet_fully_connected_14.h  resnet_model.h  resnet_operators.h  resnet_platform.h  resnet_reshape_13.h  resnet_softmax_15.h  resnet_tensors.h
examples/resnet_example/modules/resnet-aot/src/: resnet_add_11.c  resnet_add_3.c  resnet_add_7.c  resnet_average_pool_2d_12.c  resnet_constants.c  resnet_context.c  resnet_conv_2d_0.c  resnet_conv_2d_1.c  resnet_conv_2d_10.c  resnet_conv_2d_2.c  resnet_conv_2d_4.c  resnet_conv_2d_5.c  resnet_conv_2d_6.c  resnet_conv_2d_8.c  resnet_conv_2d_9.c  resnet_fully_connected_14.c  resnet_model.c  resnet_reshape_13.c  resnet_softmax_15.c  resnet_tensors.c
examples/resnet_example/src/: main.c  resnet_sample_data.h
examples/resnet_example/tools/: generate_sample_header.py
examples/usb_rpc/: CMakeLists.txt  README.md  nsx.yml
examples/usb_rpc/proto/: nsx_rpc.options  nsx_rpc.pb.c  nsx_rpc.pb.h  nsx_rpc.proto
examples/usb_rpc/src/: main.c  nsx_rpc_dispatch.c  nsx_rpc_dispatch.h
examples/usb_rpc/tools/: .gitignore  rpc_host.py
examples/usb_serial/: CMakeLists.txt  README.md  nsx.yml
examples/usb_serial/boards/apollo330mP_evb/: memory.cmake  soc.cmake
examples/usb_serial/boards/apollo510_evb/: board.cmake
examples/usb_serial/boards/apollo510dL_evb/: board.cmake  debug.cmake  soc.cmake
examples/usb_serial/modules/: .gitignore
examples/usb_serial/src/: main.c
src/neuralspotx/templates/external_app/: .gitignore  CMakeLists.txt  CMakeLists.txt.j2  README.md  README.md.j2
src/neuralspotx/templates/external_app/src/: main.c  main.c.j2
(+424 files in other folders)
