[project]
name = "neuralspotx"
version = "0.1.1"
description = "Python tooling and workspace bootstrap for neuralspotx"
requires-python = ">=3.10"
dependencies = [
    "Jinja2>=3.1",
    "PyYAML>=6.0",
    "west==1.2.0",
]

[project.scripts]
nsx = "neuralspotx.cli:main"

[dependency-groups]
docs = [
    "pymdown-extensions>=10.15",
    "zensical>=0.0.11",
]
lint = [
    "ruff>=0.11.0",
]
test = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["neuralspotx", "neuralspotx.*"]

[tool.setuptools.package-data]
neuralspotx = ["templates/external_app/**/*", "cmake/**/*", "boards/**/*"]
"neuralspotx.data" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
]
