[project]
name = "neuralspotx"
version = "0.6.7"
description = "Python tooling and app bootstrap for neuralspotx"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
readme = "README.md"
authors = [
    {name = "Ambiq", email = "support@ambiq.com"},
]
keywords = ["embedded", "firmware", "ambiq", "neuralspot", "build-system"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Embedded Systems",
    "Typing :: Typed",
]
dependencies = [
    "Jinja2>=3.1",
    "PyYAML>=6.0",
]

[project.scripts]
nsx = "neuralspotx.cli:main"

[project.urls]
Homepage = "https://github.com/AmbiqAI/neuralspotx"
Repository = "https://github.com/AmbiqAI/neuralspotx"
Issues = "https://github.com/AmbiqAI/neuralspotx/issues"
Changelog = "https://github.com/AmbiqAI/neuralspotx/blob/main/CHANGELOG.md"

[dependency-groups]
docs = [
    "mkdocs-material>=9.0",
    "pymdown-extensions>=10.15",
    "zensical>=0.0.11",
]
lint = [
    "ruff>=0.11.0",
]
test = [
    "hypothesis>=6.0",
    "pytest>=8.0",
    "pytest-timeout>=2.3",
]
examples = [
    # Host-side tools for example apps (e.g. usb_rpc rpc_host.py).
    # grpcio-tools bundles protoc + a matching protobuf, eliminating
    # version-mismatch errors between system protoc and the Python package.
    # Run: uv sync --group examples
    "pyserial>=3.5",
    "grpcio-tools>=1.70",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["neuralspotx", "neuralspotx.*"]

[tool.setuptools.package-data]
neuralspotx = ["py.typed", "templates/external_app/**/*", "cmake/**/*", "boards/**/*"]
"neuralspotx.data" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
preview = true

[tool.ruff.lint]
# Enable preview to pick up PLW1514 ("unspecified-encoding"), which
# flags `open(...)`, `Path.read_text(...)`, `Path.write_text(...)`,
# etc. without an explicit `encoding=` argument. This protects us
# from a recurrence of the R17/Windows mojibake bug, where the
# default locale encoding (cp1252 on Windows) silently corrupted an
# em-dash in a generated CMake file.
extend-select = [
    "PLW1514",  # unspecified-encoding
]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
